crates/crochet/tests/fail/not_enough_args.error
Error: Not enough args provided
   ╭─[<unknown>:1:1]
   │
 1 │ let add = (a: number, b: number): number => a + b;
   ·           ───────────────────┬───────────────────  
   ·                              ╰───────────────────── (a: number, b: number) => number
 2 │ add();
   · ──┬──  
   ·   ╰──── Expected 2 args, received 0 args
───╯

Error: Not enough args provided
   ╭─[<unknown>:1:1]
   │
 4 │ let add = (a, b) => a + b;
   ·           ───────┬───────  
   ·                  ╰───────── (a: number, b: number) => number
 5 │ add();
   · ──┬──  
   ·   ╰──── Expected 2 args, received 0 args
───╯
